--- a/about.html
+++ b/about.html
@@ -308,57 +308,38 @@
                     <span class="title-heading">TESTIMONIALS</span>
                     <hr>
                     <!-- tesomonial slider -->
+                    <!-- all testomonial added here by facebook embaded code -->
                     <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                         <div class="carousel-inner">
-                            <div class="carousel-item active">
-                                <a href="https://www.facebook.com/infoAZS">
-                                    <img src="/images/Reivew/1 (1).PNG" class="d-block w-100" alt="...">
-                                </a>
+                            <div class="carousel-item text-center active">
+                                <iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fpermalink.php%3Fstory_fbid%3Dpfbid04LqsNYVdkMrkqBTD4wxVJGUneJc4VsmdZe8yYX9P9sfqkmQJDPZY74HeYRxrrLW1l%26id%3D100083713694256&show_text=true&width=500" width="500" height="304" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
                             </div>
-                            <div class="carousel-item">
-                                <a href="https://www.facebook.com/infoAZS">
-                                    <img src="/images/Reivew/1 (2).PNG" class="d-block w-100" alt="...">
-                                </a>
+                            <div class="carousel-item text-center">
+                                <iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fabdulaziz.shakib.2367%2Fposts%2Fpfbid02oHqUMcSV2hqRaskywBLB5bN6znvBVWSLE7qhDXGkhyNJUwm7H42hoh9uh9G6XGDl&show_text=true&width=500" width="500" height="285" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
                             </div>
-                            <div class="carousel-item">
-                                <a href="https://www.facebook.com/infoAZS">
-                                    <img src="/images/Reivew/1 (3).PNG" class="d-block w-100" alt="...">
-                                </a>
+                            <div class="carousel-item text-center">
+                                <iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fmushfiqurrahman.tajvee.5%2Fposts%2Fpfbid0EUW6os5oTqksyrFRpCcacHcUcd3VrZLEEAMUrxdX6gBFFbh4uunFK7H3BcouJXAXl&show_text=true&width=500" width="500" height="169" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
                             </div>
-                            <div class="carousel-item">
-                                <a href="https://www.facebook.com/infoAZS">
-                                    <img src="/images/Reivew/1 (4).PNG" class="d-block w-100" alt="...">
-                                </a>
+                            <div class="carousel-item text-center">
+                                <iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fshaheduzzaman.TASHIN04%2Fposts%2Fpfbid0RSDRYq31LxhWN3SnJDdevhcCcmrD5QFrPrkWfLnrAS2UrK6AgTQw8PRWDEqXdPayl&show_text=true&width=500" width="500" height="207" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
                             </div>
-                            <div class="carousel-item">
-                                <a href="https://www.facebook.com/infoAZS">
-                                    <img src="/images/Reivew/1 (5).PNG" class="d-block w-100" alt="...">
-                                </a>
+                            <div class="carousel-item text-center">
+                                <iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2FInnocent.Boy.8%2Fposts%2Fpfbid0bwVrDWheifpgTrs6NpZinxq7yDUj1qZXgzJkPZ8jBZNbjfckATGeSb7L64s6Totjl&show_text=true&width=500" width="500" height="194" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
                             </div>
-                            <div class="carousel-item">
-                                <a href="https://www.facebook.com/infoAZS">
-                                    <img src="/images/Reivew/1 (6).PNG" class="d-block w-100" alt="...">
-                                </a>
+                            <div class="carousel-item text-center">
+                                <iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fsijan.khan.12327%2Fposts%2Fpfbid0Ua3qvGfm5aAq37BF4o2NRrmkNCN2zx6sskyD9CkBBi6AJonjSxm3gbJWZhG9nnfel&show_text=true&width=500" width="500" height="169" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
                             </div>
-                            <div class="carousel-item">
-                                <a href="https://www.facebook.com/infoAZS">
-                                    <img src="/images/Reivew/1 (7).PNG" class="d-block w-100" alt="...">
-                                </a>
+                            <div class="carousel-item text-center">
+                                <iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fpermalink.php%3Fstory_fbid%3Dpfbid0zBNvXDsmh78eBBnkNWm1UDQjssyBUhxNowJLdTouDEPTeuxMWPm9vVKGitz9Z6G2l%26id%3D100008635546479&show_text=true&width=500" width="500" height="227" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
                             </div>
-                            <div class="carousel-item">
-                                <a href="https://www.facebook.com/infoAZS">
-                                    <img src="/images/Reivew/1 (8).PNG" class="d-block w-100" alt="...">
-                                </a>
+                            <div class="carousel-item text-center">
+                                <iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fsetwet.rony%2Fposts%2Fpfbid0b77nCViPcRgEugjnQKuEwc6WwaH3zJ3GpTGT2Qgqmmq11yBbLMgudkMP85nTxUoNl&show_text=true&width=500" width="500" height="227" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
                             </div>
-                            <div class="carousel-item">
-                                <a href="https://www.facebook.com/infoAZS">
-                                    <img src="/images/Reivew/1 (9).PNG" class="d-block w-100" alt="...">
-                                </a>
+                            <div class="carousel-item text-center">
+                                <iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fpermalink.php%3Fstory_fbid%3Dpfbid02PuKK3Q9CNtAFL1Zj7xGy2Y5BJQq2Cn6F59ncaLTNJTBRWh3sTjabhNhm8UkwYsxml%26id%3D100076704336051&show_text=true&width=500" width="500" height="265" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
                             </div>
-                            <div class="carousel-item">
-                                <a href="https://www.facebook.com/infoAZS">
-                                    <img src="/images/Reivew/1 (10).PNG" class="d-block w-100" alt="...">
-                                </a>
+                            <div class="carousel-item text-center">
+                                <iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fpermalink.php%3Fstory_fbid%3Dpfbid02PuKK3Q9CNtAFL1Zj7xGy2Y5BJQq2Cn6F59ncaLTNJTBRWh3sTjabhNhm8UkwYsxml%26id%3D100076704336051&show_text=true&width=500" width="500" height="265" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
                             </div>
                         </div>
                         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
