removed few photos

--- a/portfolio.html
+++ b/portfolio.html
@@ -62,7 +62,7 @@
                         <img class="about-img-w img-position " src="./images/about-img.jpg" alt="">
                     </div>
                 </div>
-                <div class="header_info_about mt-5">
+                <div class="header_info_about margin-left mt-5">
                     <h5>CREATIVE PORTFOLIO</h5>
                     <hr>
                     <!-- architech -->
@@ -83,113 +83,93 @@
                     </div>
                     <h5 class="py-3">Graphic Design</h5>
                     <div class="make-grid mb-5">
-                        <div>
+                        <div class="text-center">
                             <a target="_blank" href="https://www.behance.net/bshakil">
                                 <img class="img-fluid" src="./images/portfolio/achol.jpg" alt="">
                             </a>
                         </div>
-                        <div>
-                            <a target="_blank" href="https://www.behance.net/bshakil">
-                                <img class="img-fluid" src="./images/portfolio/achol2.jpg" alt="">
-                            </a>
-                        </div>
-                        <div>
+                        <div class="text-center">
                             <a target="_blank" href="https://www.behance.net/bshakil">
                                 <img class="img-fluid" src="./images/portfolio/angaboron-card.jpg" alt="">
                             </a>
                         </div>
-                        <div>
+                        <div class="text-center">
                             <a target="_blank" href="https://www.behance.net/bshakil">
                                 <img class="img-fluid" src="./images/portfolio/angaboron.jpg" alt="">
                             </a>
                         </div>
-                        <div>
-                            <a target="_blank" href="https://www.behance.net/bshakil">
-                                <img class="img-fluid" src="./images/portfolio/angaboron2.jpg" alt="">
-                            </a>
-                        </div>
-                        <div>
+                        <div class="text-center">
                             <a target="_blank" href="https://www.behance.net/bshakil"><img class="img-fluid"
                                     src="./images/portfolio/beyon.jpg" alt="">
                             </a>
                         </div>
-                        <div>
+                        <div class="text-center">
                             <a target="_blank" href="https://www.behance.net/bshakil"><img class="img-fluid"
                                     src="./images/portfolio/big.jpg" alt="">
                             </a>
                         </div>
-                        <div>
+                        <div class="text-center">
                             <a target="_blank" href="https://www.behance.net/bshakil"><img class="img-fluid"
                                     src="./images/portfolio/car.jpg" alt="">
                             </a>
                         </div>
-                        <div>
+                        <div class="text-center">
                             <a target="_blank" href="https://www.behance.net/bshakil"><img class="img-fluid"
                                     src="./images/portfolio/color-wsatch.jpg" alt="">
                             </a>
                         </div>
-                        <div>
+                        <div class="text-center">
                             <a target="_blank" href="https://www.behance.net/bshakil"><img class="img-fluid"
                                     src="./images/portfolio/courier.jpg" alt="">
                             </a>
                         </div>
-                        <div>
+                        <div class="text-center">
                             <a target="_blank" href="https://www.behance.net/bshakil"><img class="img-fluid"
                                     src="./images/portfolio/cube.jpg" alt="">
                             </a>
                         </div>
-                        <div>
+                        <div class="text-center">
                             <a target="_blank" href="https://www.behance.net/bshakil"><img class="img-fluid"
                                     src="./images/portfolio/fashion.jpg" alt="">
                             </a>
                         </div>
-                        <div>
-                            <a target="_blank" href="https://www.behance.net/bshakil"><img class="img-fluid"
-                                    src="./images/portfolio/hospital.jpg" alt="">
-                            </a>
-                        </div>
-                        <div>
+                        <div class="text-center">
                             <a target="_blank" href="https://www.behance.net/bshakil"><img class="img-fluid"
                                     src="./images/portfolio/live-poster.jpg" alt="">
                             </a>
                         </div>
-                        <div>
+                        <div class="text-center">
                             <a target="_blank" href="https://www.behance.net/bshakil"><img class="img-fluid"
                                     src="./images/portfolio/mukti-news.jpg" alt="">
                             </a>
                         </div>
-                        <div>
-                            <a target="_blank" href="https://www.behance.net/bshakil"><img class="img-fluid"
-                                    src="./images/portfolio/mukti.jpg" alt="">
-                            </a>
-                        </div>
-                        <div>
+                        <div class="text-center">
                             <a target="_blank" href="https://www.behance.net/bshakil"><img class="img-fluid"
                                     src="./images/portfolio/rsnet.jpg" alt="">
                             </a>
                         </div>
-                        <div>
+                        <div class="text-center">
                             <a target="_blank" href="https://www.behance.net/bshakil"><img class="img-fluid"
                                     src="./images/portfolio/safia.jpg" alt="">
                             </a>
                         </div>
-                        <div>
+                        <div class="text-center">
                             <a target="_blank" href="https://www.behance.net/bshakil"><img class="img-fluid"
                                     src="./images/portfolio/slide.png" alt="">
                             </a>
                         </div>
-                        <div>
+                        <div class="text-center">
                             <a target="_blank" href="https://www.behance.net/bshakil"><img class="img-fluid"
                                     src="./images/portfolio/web.jpg" alt="">
                             </a>
                         </div>
-                        <div>
+                        <div class="text-center">
                             <a target="_blank"
                                 href="https://www.behance.net/gallery/50521093/YOUTH-Fashion-Online-Fashion-Store"><img
                                     class="img-fluid" src="./images/portfolio/write.png" alt="">
                             </a>
                         </div>
-                        <div>
+                        <div class="text-center">
                             <a target="_blank"
                                 href="https://www.behance.net/gallery/50521093/YOUTH-Fashion-Online-Fashion-Store"><img
                                     class="img-fluid" src="./images/portfolio/youth.jpg" alt="">
