serviced margin padding fixed

--- a/service.html
+++ b/service.html
@@ -62,20 +62,20 @@
                         <img class="about-img-w img-position " src="./images/about-img.jpg" alt="">
                     </div>
                 </div>
-                <div class="make-grid header_info_about my-5">
-                    <div class="card text-center same-height">
+                <div class="make-grid header_info_about margin-left my-5">
+                    <div class="card text-center same-height take-center">
                         <div class="card-body d-flex justify-content-center align-items-center flex-column">
                             <i class="fa-solid fa-city service-icon"></i>
                             <h4 class="card-title">Architectural Visualization</h4>
                         </div>
                     </div>
-                    <div class="card text-center same-height">
+                    <div class="card text-center same-height take-center">
                         <div class="card-body d-flex justify-content-center align-items-center flex-column">
                             <i class="fa-solid fa-pen-nib service-icon"></i>
                             <h4 class="card-title">Graphic Design</h4>
                         </div>
                     </div>
-                    <a target="_blank" class="link-box" href="https://www.facebook.com/infoAZS/services">
+                    <a target="_blank" class="link-box take-center" href="https://www.facebook.com/infoAZS/services">
                         <div class="card text-center same-height">
                             <div class="card-body d-flex justify-content-center align-items-center flex-column">
                                 <i class="fa-solid fa-file-pen service-icon"></i>
@@ -83,7 +83,7 @@
                             </div>
                         </div>
                     </a>
-                    <a target="_blank" class="link-box" href="https://www.facebook.com/infoAZS/services">
+                    <a target="_blank" class="link-box take-center" href="https://www.facebook.com/infoAZS/services">
                         <div class="card text-center same-height">
                             <div class="card-body d-flex justify-content-center align-items-center flex-column">
                                 <i class="fa-solid fa-file service-icon"></i>
@@ -91,7 +91,7 @@
                             </div>
                         </div>
                     </a>
-                    <a target="_blank" class="link-box" href="https://www.facebook.com/infoAZS/services">
+                    <a target="_blank" class="link-box take-center" href="https://www.facebook.com/infoAZS/services">
                         <div class="card text-center mb-5 same-height">
                             <div class="card-body d-flex justify-content-center align-items-center flex-column">
                                 <i class="fa-solid fa-handshake-angle service-icon"></i>
