--- a/contact.html
+++ b/contact.html
@@ -63,7 +63,7 @@
                     <img class="about-img-w img-position " src="./images/about-img.jpg" alt="">
                 </div>
             </div>
-            <div class="header_info_about mt-5">
+            <div class="header_info_about margin-left mt-5">
                 <h3>Get in touch</h3>
                 <hr>
                 <div class="contact-intro-grid">
@@ -93,7 +93,7 @@
                     <div class="contact-same-width">
                         <iframe
                             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3092.7838203128435!2d117.165882!3d39.179635!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x35ee00a26a0a0163%3A0xc13a344f1ce8ef63!2sHebei%20University%20of%20Technology!5e0!3m2!1sen!2sbd!4v1659203848550!5m2!1sen!2sbd"
-                            width="350" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                            width="550" height="450" class="map-width" style="border:0;" allowfullscreen="" loading="lazy"
                             referrerpolicy="no-referrer-when-downgrade"></iframe>
                     </div>
                 </div>
