--- a/about.html
+++ b/about.html
@@ -63,15 +63,16 @@
                     </div>
                 </div>
                 <div class="">
-<!-- div scroll -->
-                    
+                    <!-- div scroll -->
+
                 </div>
                 <div class="header_info_about mt-5 about-left-side-margin">
                     <span class="title-heading fs-5">ABOUT ME</span>
                     <hr>
                     <div class="d-flex mb-5">
                         <div class="width-pera">
-                            <p class="about-me-pera about-margin">Assalamu Walaikum, I'm MD ASHADUZZAMAN SHAKIL a freelance
+                            <p class="about-me-pera about-margin">Assalamu Walaikum, I'm MD ASHADUZZAMAN SHAKIL a
+                                freelance
                                 Architectural Visualizer & Graphic designer
                                 and Creator of <a href="https://www.facebook.com/csdsbsofficial"
                                     target="_blank">CSDSBS</a>.
@@ -181,18 +182,18 @@
                         <div class="width-pera">
                             <span class="title-heading">EDUCATION</span>
                             <hr>
-                            <span class="gray-color d-block mt-4 d-flex">
+                            <span class="gray-color d-block mt-4 d-flex small-screen-view">
                                 <div class="pe-3">
                                     <span class="study-year d-inline-block mb-2">2019-2023</span>
                                 </div>
                                 <div>
                                     <i class="fa-solid fa-graduation-cap"></i>
                                     <h6 class="d-inline">Hebei University of
-                                    Technology</h6> <br>
+                                        Technology</h6> <br>
                                     <span>Bachelor's, Civil Engineering</span>
                                 </div>
                             </span>
-                            <span class="gray-color d-block mt-5 d-flex">
+                            <span class="gray-color d-block mt-5 d-flex small-screen-view">
                                 <div class="pe-3">
                                     <span class="study-year d-inline-block mb-2">2017-2019</span>
                                 </div>
@@ -203,7 +204,7 @@
                                     <span>Bachelor's degree, Civil Engineering</span>
                                 </div>
                             </span>
-                            <span class="gray-color d-block mt-5 d-flex">
+                            <span class="gray-color d-block mt-5 d-flex small-screen-view">
                                 <div class="pe-3">
                                     <span class="study-year d-inline-block mb-2">2017-2019</span>
                                 </div>
@@ -218,7 +219,7 @@
                         <div class="width-addres-pera">
                             <span class="title-heading">EXPERIENCES</span>
                             <hr>
-                            <span class="gray-color d-block pt-1 d-flex">
+                            <span class="gray-color d-block pt-1 d-flex small-screen-view">
                                 <div class="pe-3">
                                     <span class="study-year d-inline-block mb-2">2016-2019</span>
                                 </div>
@@ -229,7 +230,7 @@
                                     <span>Assistant Engineer</span>
                                 </div>
                             </span>
-                            <span class="gray-color d-block mt-5 d-flex">
+                            <span class="gray-color d-block mt-5 d-flex small-screen-view">
                                 <div class="pe-3">
                                     <span class="study-year d-inline-block mb-2">2016-2017</span>
                                 </div>
@@ -240,7 +241,7 @@
                                     <span>Architechtural Visualizer</span>
                                 </div>
                             </span>
-                            <span class="gray-color d-block mt-5 d-flex">
+                            <span class="gray-color d-block mt-5 d-flex small-screen-view">
                                 <div class="pe-3">
                                     <span class="study-year d-inline-block mb-2">2016-2017</span>
                                 </div>
@@ -251,7 +252,7 @@
                                     <span>Intern Civil Engineering</span>
                                 </div>
                             </span>
-                            <span class="gray-color d-block mt-5 d-flex">
+                            <span class="gray-color d-block mt-5 d-flex small-screen-view">
                                 <div class="pe-3">
                                     <span class="study-year d-inline-block mb-2">2012-2016</span>
                                 </div>
@@ -312,34 +313,74 @@
                     <div id="carouselExampleControls" class="carousel slide mb-5" data-bs-ride="carousel">
                         <div class="carousel-inner">
                             <div class="carousel-item text-center active">
-                                <iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fpermalink.php%3Fstory_fbid%3Dpfbid04LqsNYVdkMrkqBTD4wxVJGUneJc4VsmdZe8yYX9P9sfqkmQJDPZY74HeYRxrrLW1l%26id%3D100083713694256&show_text=true&width=500" width="500" height="304" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
+                                <iframe
+                                    src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fpermalink.php%3Fstory_fbid%3Dpfbid04LqsNYVdkMrkqBTD4wxVJGUneJc4VsmdZe8yYX9P9sfqkmQJDPZY74HeYRxrrLW1l%26id%3D100083713694256&show_text=true&width=500"
+                                    width="100%" height="304" style="border:none;overflow:hidden" scrolling="no"
+                                    frameborder="0" allowfullscreen="true"
+                                    allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
                             </div>
                             <div class="carousel-item text-center">
-                                <iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fabdulaziz.shakib.2367%2Fposts%2Fpfbid02oHqUMcSV2hqRaskywBLB5bN6znvBVWSLE7qhDXGkhyNJUwm7H42hoh9uh9G6XGDl&show_text=true&width=500" width="500" height="285" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
+                                <iframe
+                                    src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fabdulaziz.shakib.2367%2Fposts%2Fpfbid02oHqUMcSV2hqRaskywBLB5bN6znvBVWSLE7qhDXGkhyNJUwm7H42hoh9uh9G6XGDl&show_text=true&width=500"
+                                    width="100%" height="285" style="border:none;overflow:hidden" scrolling="no"
+                                    frameborder="0" allowfullscreen="true"
+                                    allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
                             </div>
                             <div class="carousel-item text-center">
-                                <iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fmushfiqurrahman.tajvee.5%2Fposts%2Fpfbid0EUW6os5oTqksyrFRpCcacHcUcd3VrZLEEAMUrxdX6gBFFbh4uunFK7H3BcouJXAXl&show_text=true&width=500" width="500" height="169" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
+                                <iframe
+                                    src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fmushfiqurrahman.tajvee.5%2Fposts%2Fpfbid0EUW6os5oTqksyrFRpCcacHcUcd3VrZLEEAMUrxdX6gBFFbh4uunFK7H3BcouJXAXl&show_text=true&width=500"
+                                    width="100%" height="169" style="border:none;overflow:hidden" scrolling="no"
+                                    frameborder="0" allowfullscreen="true"
+                                    allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
                             </div>
                             <div class="carousel-item text-center">
-                                <iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fshaheduzzaman.TASHIN04%2Fposts%2Fpfbid0RSDRYq31LxhWN3SnJDdevhcCcmrD5QFrPrkWfLnrAS2UrK6AgTQw8PRWDEqXdPayl&show_text=true&width=500" width="500" height="207" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
+                                <iframe
+                                    src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fshaheduzzaman.TASHIN04%2Fposts%2Fpfbid0RSDRYq31LxhWN3SnJDdevhcCcmrD5QFrPrkWfLnrAS2UrK6AgTQw8PRWDEqXdPayl&show_text=true&width=500"
+                                    width="100%" height="207" style="border:none;overflow:hidden" scrolling="no"
+                                    frameborder="0" allowfullscreen="true"
+                                    allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
                             </div>
                             <div class="carousel-item text-center">
-                                <iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2FInnocent.Boy.8%2Fposts%2Fpfbid0bwVrDWheifpgTrs6NpZinxq7yDUj1qZXgzJkPZ8jBZNbjfckATGeSb7L64s6Totjl&show_text=true&width=500" width="500" height="194" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
+                                <iframe
+                                    src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2FInnocent.Boy.8%2Fposts%2Fpfbid0bwVrDWheifpgTrs6NpZinxq7yDUj1qZXgzJkPZ8jBZNbjfckATGeSb7L64s6Totjl&show_text=true&width=500"
+                                    width="100%" height="194" style="border:none;overflow:hidden" scrolling="no"
+                                    frameborder="0" allowfullscreen="true"
+                                    allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
                             </div>
                             <div class="carousel-item text-center">
-                                <iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fsijan.khan.12327%2Fposts%2Fpfbid0Ua3qvGfm5aAq37BF4o2NRrmkNCN2zx6sskyD9CkBBi6AJonjSxm3gbJWZhG9nnfel&show_text=true&width=500" width="500" height="169" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
+                                <iframe
+                                    src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fsijan.khan.12327%2Fposts%2Fpfbid0Ua3qvGfm5aAq37BF4o2NRrmkNCN2zx6sskyD9CkBBi6AJonjSxm3gbJWZhG9nnfel&show_text=true&width=500"
+                                    width="100%" height="169" style="border:none;overflow:hidden" scrolling="no"
+                                    frameborder="0" allowfullscreen="true"
+                                    allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
                             </div>
                             <div class="carousel-item text-center">
-                                <iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fpermalink.php%3Fstory_fbid%3Dpfbid0zBNvXDsmh78eBBnkNWm1UDQjssyBUhxNowJLdTouDEPTeuxMWPm9vVKGitz9Z6G2l%26id%3D100008635546479&show_text=true&width=500" width="500" height="227" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
+                                <iframe
+                                    src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fpermalink.php%3Fstory_fbid%3Dpfbid0zBNvXDsmh78eBBnkNWm1UDQjssyBUhxNowJLdTouDEPTeuxMWPm9vVKGitz9Z6G2l%26id%3D100008635546479&show_text=true&width=500"
+                                    width="100%" height="227" style="border:none;overflow:hidden" scrolling="no"
+                                    frameborder="0" allowfullscreen="true"
+                                    allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
                             </div>
                             <div class="carousel-item text-center">
-                                <iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fsetwet.rony%2Fposts%2Fpfbid0b77nCViPcRgEugjnQKuEwc6WwaH3zJ3GpTGT2Qgqmmq11yBbLMgudkMP85nTxUoNl&show_text=true&width=500" width="500" height="227" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
+                                <iframe
+                                    src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fsetwet.rony%2Fposts%2Fpfbid0b77nCViPcRgEugjnQKuEwc6WwaH3zJ3GpTGT2Qgqmmq11yBbLMgudkMP85nTxUoNl&show_text=true&width=500"
+                                    width="100%" height="227" style="border:none;overflow:hidden" scrolling="no"
+                                    frameborder="0" allowfullscreen="true"
+                                    allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
                             </div>
                             <div class="carousel-item text-center">
-                                <iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fpermalink.php%3Fstory_fbid%3Dpfbid02PuKK3Q9CNtAFL1Zj7xGy2Y5BJQq2Cn6F59ncaLTNJTBRWh3sTjabhNhm8UkwYsxml%26id%3D100076704336051&show_text=true&width=500" width="500" height="265" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
+                                <iframe
+                                    src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fpermalink.php%3Fstory_fbid%3Dpfbid02PuKK3Q9CNtAFL1Zj7xGy2Y5BJQq2Cn6F59ncaLTNJTBRWh3sTjabhNhm8UkwYsxml%26id%3D100076704336051&show_text=true&width=500"
+                                    width="100%" height="265" style="border:none;overflow:hidden" scrolling="no"
+                                    frameborder="0" allowfullscreen="true"
+                                    allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
                             </div>
                             <div class="carousel-item text-center">
-                                <iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fpermalink.php%3Fstory_fbid%3Dpfbid02PuKK3Q9CNtAFL1Zj7xGy2Y5BJQq2Cn6F59ncaLTNJTBRWh3sTjabhNhm8UkwYsxml%26id%3D100076704336051&show_text=true&width=500" width="500" height="265" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
+                                <iframe
+                                    src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fpermalink.php%3Fstory_fbid%3Dpfbid02PuKK3Q9CNtAFL1Zj7xGy2Y5BJQq2Cn6F59ncaLTNJTBRWh3sTjabhNhm8UkwYsxml%26id%3D100076704336051&show_text=true&width=500"
+                                    width="100%" height="265" style="border:none;overflow:hidden" scrolling="no"
+                                    frameborder="0" allowfullscreen="true"
+                                    allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
                             </div>
                         </div>
                         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
