--- a/contact.html
+++ b/contact.html
@@ -63,7 +63,7 @@
                     <img class="about-img-w img-position " src="./images/about-img.jpg" alt="">
                 </div>
             </div>
-            <div class="header_info_about margin-left mt-5">
+            <div class="header_info_about margin-left responsive-left-m-0 mt-5">
                 <h3>Get in touch</h3>
                 <hr>
                 <div class="contact-intro-grid">
