--- a/service.html
+++ b/service.html
@@ -62,7 +62,7 @@
                         <img class="about-img-w img-position " src="./images/about-img.jpg" alt="">
                     </div>
                 </div>
-                <div class="make-grid header_info_about margin-left my-5">
+                <div class="make-grid header_info_about margin-left responsive-left-m-0 my-5">
                     <div class="card text-center same-height take-center">
                         <div class="card-body d-flex justify-content-center align-items-center flex-column">
                             <i class="fa-solid fa-city service-icon"></i>
