--- a/vlog.html
+++ b/vlog.html
@@ -59,7 +59,7 @@
                 <div class="about-margin-right">
                     <img class="about-img-w img-position " src="./images/about-img.jpg" alt="">
                 </div>
-                <div class="article-margin-left mt-5 header-element">
+                <div class="article-margin-left responsive-left-m-0 mt-5 header-element">
                     <h5>Latest articles</h5>
                     <hr>
                     <div>
