--- a/portfolio.html
+++ b/portfolio.html
@@ -62,7 +62,7 @@
                         <img class="about-img-w img-position " src="./images/about-img.jpg" alt="">
                     </div>
                 </div>
-                <div class="header_info_about margin-left mt-5">
+                <div class="header_info_about margin-left responsive-left-m-0 mt-5">
                     <h5>CREATIVE PORTFOLIO</h5>
                     <hr>
                     <!-- architech -->
