location and telegram icon added

--- a/contact.html
+++ b/contact.html
@@ -68,7 +68,7 @@
                 <hr>
                 <div class="contact-intro-grid">
                     <div class="card text-center">
-                        <i class="fa-solid fa-location-arrow mt-5 fs-3"></i>
+                        <i class="fa-solid fa-location-dot mt-5 fs-3"></i>
                         <span class="pt-3">Tianjin, China</span>
                     </div>
                     <div class="card text-center">
@@ -77,6 +77,10 @@
                     </div>
                     <div class="card text-center">
                         <i class="fa-solid fa-phone mt-5 fs-3"></i>
+                        <span class="pt-3">+86 182 2270 9904</span>
+                    </div>
+                    <div class="card text-center">
+                        <i class="fa-brands fa-telegram mt-5 fs-3"></i>
                         <span class="pt-3">+86 182 2270 9904</span>
                     </div>
                 </div>
