little problem fixed

--- a/about.html
+++ b/about.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+l<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -84,7 +84,7 @@
                                 Motivated and skilled person. I have strong leadership skills and the ability to
                                 organize.
                                 Aiming to
-                                apply my academic experiences in the management internship available in your company.
+                                apply my academic experiences available position in your company.
                             </p>
                         </div>
                         <div class="width-addres-pera">
