--- a/contact.html
+++ b/contact.html
@@ -79,10 +79,12 @@
                         <i class="fa-solid fa-phone mt-5 fs-3"></i>
                         <span class="pt-3">+86 182 2270 9904</span>
                     </div>
-                    <div class="card text-center">
-                        <i class="fa-brands fa-telegram mt-5 fs-3"></i>
-                        <span class="pt-3">+86 182 2270 9904</span>
-                    </div>
+                    <a class="telegram-box" href="https://t.me/swbyAZ">
+                        <div class="card text-center">
+                            <i class="fa-brands fa-telegram mt-5 fs-3"></i>
+                            <span class="pt-3">Telegram</span>
+                        </div>
+                    </a>
                 </div>
                 <!-- map -->
                 <div class="d-flex mt-5 mb-5 media-q-contact">
