--- a/about.html
+++ b/about.html
@@ -12,6 +12,7 @@ l<!DOCTYPE html>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link rel="shortcut icon" href="/images/Asset 2.png" type="image/x-icon">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -69,7 +70,8 @@ l<!DOCTYPE html>
                 <div class="header_info_about mt-5 about-left-side-margin">
                     <span class="title-heading fs-5">ABOUT ME</span>
                     <hr>
-                    <div class="d-flex mb-5">
+                    <div class="d-flex mb-5" data-aos="fade-up"
+                    data-aos-duration="3000">
                         <div class="width-pera">
                             <p class="about-me-pera about-margin">Assalamu Walaikum, I'm MD ASHADUZZAMAN SHAKIL a
                                 freelance
@@ -113,7 +115,8 @@ l<!DOCTYPE html>
             <div class="left-side-margin">
                 <section class="mt-5">
                     <div class="d-flex">
-                        <div class="width-pera">
+                        <div class="width-pera" data-aos="fade-up"
+                        data-aos-duration="3000">
                             <span class="title-heading service-title">SERVICES</span>
                             <hr>
                             <span class="gray-color d-block"><i class="fa-solid fa-computer"></i> Digital
@@ -124,7 +127,8 @@ l<!DOCTYPE html>
                             <br>
                             <span class="gray-color d-block"><i class="fa-solid fa-crop"></i> Graphics Design</span>
                         </div>
-                        <div class="width-addres-pera">
+                        <div class="width-addres-pera" data-aos="fade-up"
+                        data-aos-duration="3000">
                             <span class="title-heading">INTERESTS</span>
                             <hr>
                             <span class="gray-color d-block"><i class="fa-solid fa-chart-simple"></i> Building
@@ -143,41 +147,43 @@ l<!DOCTYPE html>
 
                     </div>
                 </section>
-                <section class="mt-5">
-                    <div class="d-flex">
-                        <div class="width-pera">
-                            <span class="title-heading">SKILLS</span>
-                            <hr>
-                            <span class="gray-color d-block"><i class="fa-solid fa-pen-nib"></i> Adobe
-                                Illustrator</span>
-                            <br>
-                            <span class="gray-color d-block"><i class="fa-solid fa-paintbrush"></i> Adobe
-                                Photoshop</span>
-                            <br>
-                            <span class="gray-color d-block"><i class="fa-brands fa-autoprefixer"></i> Auto CAD</span>
-                            <br>
-                            <span class="gray-color d-block"><i class="fa-brands fa-unity"></i> Twinmotion</span>
-                            <br>
-                            <span class="gray-color d-block"><i class="fa-brands fa-trello"></i> Lumion</span>
-                            <br>
-                            <span class="gray-color d-block"><i class="fa-solid fa-cube"></i> Sketch-UP</span>
-                            <br>
-                            <span class="gray-color d-block"><i class="fa-solid fa-file-pen"></i> Ravit</span>
+                <section class="mt-5" data-aos="fade-up"
+                data-aos-duration="3000">
+                        <div class="d-flex">
+                            <div class="width-pera">
+                                <span class="title-heading">SKILLS</span>
+                                <hr>
+                                <span class="gray-color d-block"><i class="fa-solid fa-pen-nib"></i> Adobe
+                                    Illustrator</span>
+                                <br>
+                                <span class="gray-color d-block"><i class="fa-solid fa-paintbrush"></i> Adobe
+                                    Photoshop</span>
+                                <br>
+                                <span class="gray-color d-block"><i class="fa-brands fa-autoprefixer"></i> Auto CAD</span>
+                                <br>
+                                <span class="gray-color d-block"><i class="fa-brands fa-unity"></i> Twinmotion</span>
+                                <br>
+                                <span class="gray-color d-block"><i class="fa-brands fa-trello"></i> Lumion</span>
+                                <br>
+                                <span class="gray-color d-block"><i class="fa-solid fa-cube"></i> Sketch-UP</span>
+                                <br>
+                                <span class="gray-color d-block"><i class="fa-solid fa-file-pen"></i> Ravit</span>
+                            </div>
+                            <div class="width-addres-pera">
+                                <span class="title-heading">LANGUAGE</span>
+                                <hr>
+                                <span class="gray-color d-block"><i class="fa-solid fa-earth-asia"></i> Bangla
+                                    (বাংলা)</span>
+                                <br>
+                                <span class="gray-color d-block"><i class="fa-solid fa-earth-americas"></i> English</span>
+                                <br>
+                                <span class="gray-color d-block"><i class="fa-solid fa-earth-asia"></i> Chaines
+                                    (中國人)</span>
+                            </div>
                         </div>
-                        <div class="width-addres-pera">
-                            <span class="title-heading">LANGUAGE</span>
-                            <hr>
-                            <span class="gray-color d-block"><i class="fa-solid fa-earth-asia"></i> Bangla
-                                (বাংলা)</span>
-                            <br>
-                            <span class="gray-color d-block"><i class="fa-solid fa-earth-americas"></i> English</span>
-                            <br>
-                            <span class="gray-color d-block"><i class="fa-solid fa-earth-asia"></i> Chaines
-                                (中國人)</span>
-                        </div>
-                    </div>
                 </section>
-                <section class="mt-5">
+                <section class="mt-5" data-aos="fade-up"
+                data-aos-duration="3000">
                     <div class="d-flex">
                         <div class="width-pera">
                             <span class="title-heading">EDUCATION</span>
@@ -266,7 +272,8 @@ l<!DOCTYPE html>
                         </div>
                     </div>
                 </section>
-                <section class="mt-5">
+                <section class="mt-5" data-aos="fade-up"
+                data-aos-duration="3000">
                     <div>
                         <span class="title-heading">Licenses & certifications</span>
                         <hr>
@@ -305,7 +312,8 @@ l<!DOCTYPE html>
                     </div>
                 </section>
                 <!-- testomonial -->
-                <section class="mt-5">
+                <section class="mt-5" data-aos="fade-up"
+                data-aos-duration="3000">
                     <span class="title-heading">TESTIMONIALS</span>
                     <hr>
                     <!-- tesomonial slider -->
@@ -424,6 +432,10 @@ l<!DOCTYPE html>
         crossorigin="anonymous"></script>
     <!-- typing effect CDN link and JS code -->
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+      </script>
     <!-- auto typing js code -->
     <script>
         var typed = new Typed(".auto-type", {
