--- a/articles.html
+++ b/articles.html
@@ -47,7 +47,7 @@
                             <a class="nav-link" href="/contact.html">Contact</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/vlog.html">Articles</a>
+                            <a class="nav-link" href="/articles.html">Articles</a>
                         </li>
                     </ul>
                 </div>
@@ -63,7 +63,7 @@
                 <div class="article-margin-left responsive-left-m-0 mt-5 header-element">
                     <h5>Latest articles</h5>
                     <hr>
-                    <div>
+                    <div class="pstn_rltv_for_img">
                         <div>
                             <button class="accordion">𝗜𝗘𝗟𝗧𝗦/ 𝗗𝘂𝗼𝗹𝗶𝗻𝗴𝗼 এর জন্য কি 𝗩𝗜𝗦𝗔 𝗥𝗲𝗳𝘂𝘀𝗲
                                 হয়?</button>
@@ -1045,6 +1045,11 @@
                                     ️<br>For more information message us.
                                 </p>
                             </div>
+                        </div>
+                        <div>
+                            <a target="_blank" href="https://mega.nz/folder/fYkVwCxY#nzyHbyUJnpldDQTZm-zb1w">
+                                <img class="gift_img" src="./images/balloon_6-removebg-preview.png" alt="">
+                            </a>
                         </div>
                     </div>
                 </div>
