--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                             <a class="nav-link" href="/contact.html">Contact</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/vlog.html">Articles</a>
+                            <a class="nav-link" href="/articles.html">Articles</a>
                         </li>
                     </ul>
                 </div>
@@ -72,6 +72,7 @@
                 </div>
             </div>
         </div>
+        
     </main>
     <!-- Footer____Footer____Footer____Footer____Footer____Footer____Footer____Footer-->
     <footer class="d-block">
